Feat/get cashflow between (#17)
* chore: remove user permissions

* chore: implement GetCashflowBetween feature

* chore: implement query parameters startAt and endAt to /balances endpoint

* chore: update fiber auth middleware

* chore: update logger JSON interfaces

* chore: update docs
