# internal/api/fiber/docs/swagger.json
@@ -118,6 +118,22 @@
                     "Balances"
                 ],
                 "summary": "List balances",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "dateTime",
+                        "description": "name search by q",
+                        "name": "start_at",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "format": "dateTime",
+                        "description": "name search by q",
+                        "name": "end_at",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -375,14 +391,14 @@
                         "type": "string",
                         "format": "dateTime",
                         "description": "name search by q",
-                        "name": "startAt",
+                        "name": "start_at",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "format": "dateTime",
                         "description": "name search by q",
-                        "name": "endAt",
+                        "name": "end_at",
                         "in": "query"
                     }
                 ],
@@ -620,12 +636,6 @@
                 },
                 "password": {
                     "type": "string"
-                },
-                "permissions": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
                 }
             }
         },
@@ -775,12 +785,6 @@
                 },
                 "name": {
                     "type": "string"
-                },
-                "permissions": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
                 }
             }
         }
